Update DIRECTORY 3 - VOCABULARY MENU.html

--- a/DIRECTORY 3 - VOCABULARY MENU.html
+++ b/DIRECTORY 3 - VOCABULARY MENU.html
@@ -97,7 +97,7 @@
     </nav>
     <section id="container">
         <section id="containerLeft">
-            <a href="./DIRECTORY 1 - MAIN MENU.html">
+            <a href="./index.html">
                 <button>↩️ Go back</button>
             </a>
             <div>
